--- a/app/assets/components/oj-global-expressions.html
+++ b/app/assets/components/oj-global-expressions.html
@@ -3,7 +3,7 @@
     $.extend(
         PolymerExpressions.prototype,
         Oj.globalExpressions,
-        Oj.paperExpressions,
+        Oj.paperHelpers,
         Oj.urls
     );
 
