--- a/app/assets/stylesheets/state-colors.css.scss
+++ b/app/assets/stylesheets/state-colors.css.scss
@@ -30,11 +30,20 @@ $oj-paper-actions-bg: (
         rejected:        #ffd6da,
 );
 
-// Author roles
+// User roles
 $oj-paper-roles-bg: (
-        author:   #beaed4,  // blue
-        reviewer: #7fc97f,  // green
-        editor:   #fdc086,  // orange-red
+        author:       #beaed4,  // blue
+        submittor:    #beaed4,  // blue
+        collaborator: #ff87f8,  // purple
+        reviewer:     #7fc97f,  // green
+        editor:       #fdc086,  // orange-red
+);
+$oj-paper-roles-fg: (
+        author:       #0d10d4,  // blue
+        submittor:    #0d10d4,  // blue
+        collaborator: purple,   // purple
+        reviewer:     green,  // green
+        editor:       orangered,  // orange-red
 );
 
 body /deep/ {
@@ -99,6 +108,16 @@ body /deep/ {
       }
 
     }
+
+  }
+
+  oj-user-label {
+
+      @each $role, $color in $oj-paper-roles-fg {
+        &.role-#{$role} {
+          border-top-color: $color;
+        }
+      }
 
   }
 
