--- a/app/assets/components/mixins/oj-paper-helpers.html
+++ b/app/assets/components/mixins/oj-paper-helpers.html
@@ -40,38 +40,30 @@
                 return 'author';
         },
 
-        // Given any user object returns the user object from the paper
+        // Given a assignment sha returns the assignment object from the paper
         // With some additional metadata
-        paperUser: function(paper, user) {
-            if (!user)
+        assignmentFromSha: function(paper, assignment_sha) {
+            if (!assignment_sha)
                 return undefined;
-            var sha = user.sha;
 
-            if (!paper.userBySha)
-                paper.userBySha = {};
+            if (!paper.assignmentsBySha)
+                paper.assignmentsBySha = {};
 
-            if (paper.userBySha[sha]===undefined) {
-                var index;
+            if (paper.assignmentsBySha[assignment_sha]===undefined) {
+                var index = Oj.utils.indexOf(paper.assigned_users, function(a) {return a.sha == assignment_sha} );
 
-                if (paper.user.sha == sha) {
-                    user  = paper.user;
-                    user.index = 0;
-                    user.role  = 'submittor';
-
-
-                } else if (index = Oj.utils.indexOf(paper.reviewers, function(r) {return r.sha == sha}) ) {
-                    user  = paper.reviewers[index];
-                    user.index = index;
-                    user.role  = 'reviewer';
+                if (index >= 0) {
+                    var assignment = paper.assigned_users[index];
+                    assignment.index = index;
 
                 } else {
-                    user = null;
+                    var assignment = null;
                 }
 
-                paper.userBySha[sha] = user;
+                paper.assignmentsBySha[assignment_sha] = assignment;
             }
 
-            return paper.userBySha[sha];
+            return paper.assignmentsBySha[assignment_sha];
         }
 
     };
