--- a/app/assets/components/mixins/oj-utils.html
+++ b/app/assets/components/mixins/oj-utils.html
@@ -7,7 +7,15 @@
                 if (callback.call(thisObj, array[i], i, array) )
                     return i;
             return -1;
+        },
+
+        detect: function(array, callback, thisObj) {
+            for (var i=0; i<array.length; i++)
+                if (callback.call(thisObj, array[i], i, array) )
+                    return array[i];
+            return undefined;
         }
+
 
     };
 
