--- a/app/assets/components/ui-elements/oj-review-page-header.html
+++ b/app/assets/components/ui-elements/oj-review-page-header.html
@@ -7,7 +7,7 @@
                   <template repeat="{{assignment in paper.assigned_users | exceptReviewers}}" >
                       <oj-user-tag assignment={{assignment}}
                                    showColor={{!submitted}}
-                                   tagColor={{userColor(u)}}
+                                   tagColor={{userColor(assignment)}}
                               ></oj-user-tag>
                   </template>
               </div>
@@ -121,9 +121,9 @@
             return list && list.filter( function(a) { return a.role != 'reviewer' });
         },
 
-        userColor: function(user) {
-            var paper_user = Oj.paperHelpers.paperUser(this.paper, user);
-            return Oj.colors.userColor(paper_user);
+        userColor: function(assignment) {
+            assignment = Oj.paperHelpers.assignmentFromSha(this.paper, assignment.sha);
+            return Oj.colors.userColor(assignment);
         }
 
     })
