--- a/app/assets/components/ui-elements/oj-annotation.html
+++ b/app/assets/components/ui-elements/oj-annotation.html
@@ -1,9 +1,9 @@
 <polymer-element name='oj-annotation' attributes="paper annotation text">
   <template>
 
-    <div class='container state-{{annotation.state}} role-{{annotation.author.role}} collapsed' >
+    <div class='container state-{{annotation.state}} collapsed' >
 
-      <template if="{{paper.state=='under_review' && (annotation.author.role=='editor' || annotation.author.role == 'reviewer' ) }}">
+      <template if="{{paper.state=='under_review' && (role=='editor' || role == 'reviewer' ) }}">
         <oj-reviewer-annotation-controls paper={{paper}}  annotation={{annotation}} ></oj-reviewer-annotation-controls>
       </template>
 
@@ -19,9 +19,9 @@
     <core-collapse id=collapsible opened={{annotation.open}}>
       <core-a11y-keys keys="esc" on-keys-pressed={{collapse}}></core-a11y-keys>
 
-      <div class='container state-{{annotation.state}} role-{{annotation.author.role}} expanded' >
+      <div class='container state-{{annotation.state}} expanded' >
 
-          <template if="{{paper.state=='under_review' && (annotation.author.role=='editor' || annotation.author.role == 'reviewer' ) }}">
+          <template if="{{paper.state=='under_review' && (role=='editor' || role == 'reviewer' ) }}">
               <oj-reviewer-annotation-controls paper={{paper}}  annotation={{annotation}} ></oj-reviewer-annotation-controls>
           </template>
 
@@ -163,7 +163,12 @@
       showNewComment: function() {
         this.$.comments.showNewComment();
       },
+      annotationChanged: function() {
+        if (!this.annotation) return;
 
+        var assignment = Oj.paperHelpers.assignmentFromSha(this.paper, this.annotation.assignment);
+        this.role = assignment && assignment.role;
+      },
       annotationOpenChanged: function() {
         if (this.annotation.open)
             this.expand();
