--- a/app/assets/components/elements/paper-url-resolver.html
+++ b/app/assets/components/elements/paper-url-resolver.html
@@ -1,54 +1,57 @@
-<polymer-element name="paper-url-resolver" attributes='text paperId paperURL paperVersion resolved'>
+<polymer-element name="paper-url-resolver" attributes='text resolved paperId paperFullId paperVersion paperURL'>
 
   <template>
 
   </template>
   <script>
     Polymer({
+
       paperId      : null,
-      paperURL     : null,
       paperVersion : null,
+      paperFullId  : null,
+      paperURL     : null,
       resolved     : false,
 
       textChanged:function(){
 
-        paper_page_pattern    = /^\s*https?:\/\/arxiv\.org\/abs\/([0-9]{4}\.[0-9]{4})(v[0-9]+)?(\.pdf)?\s*/;
-        paper_pdf_pattern     = /^\s*https?:\/\/arxiv\.org\/pdf\/([0-9]{4}\.[0-9]{4})(v[0-9]+)?(\.pdf)?\s*/;
-        paper_id_pattern      = /^\s*([0-9]{4}\.[0-9]{4})(v[0-9]+)?\s*/;
+        var arxiv_id_pattern      = '([0-9]{4}\\.[0-9]{4})(v[0-9]+)?';
+        var regex_flags           = 'i';
+        var paper_id_pattern      = new RegExp('^\\s*' + arxiv_id_pattern + '\\s*$', regex_flags);
+        var paper_page_pattern    = new RegExp('^\\s*https?:\/\/arxiv\\.org\/abs\/' + arxiv_id_pattern + '(\\.pdf)?\\s*$', regex_flags);
+        var paper_pdf_pattern     = new RegExp('^\\s*https?:\/\/arxiv\\.org\/pdf\/' + arxiv_id_pattern + '(\\.pdf)?\\s*$', regex_flags);
 
         if(match = this.text.match(paper_page_pattern)){
           this.paperId       = match[1];
           this.paperVersion  = match[2];
-          this.paperURL      = this.constructURL();
           this.resolved      = true;
         }
         else if(match        = this.text.match(paper_pdf_pattern)){
           this.paperId       = match[1];
           this.paperVersion  = match[2];
-          this.paperURL      = this.text;
           this.resolved      = true;
         }
         else if(match        = this.text.match(paper_id_pattern)){
           this.paperId       = match[1];
           this.paperVersion  = match[2];
-          this.paperURL      = this.constructURL();
           this.resolved      = true;
         }
         else      {
           this.paperId      = null;
           this.paperVersion = null;
-          this.paperURL     = null;
           this.resolved     = false;
         }
-      },
-      constructURL:function(){
-        url = "http://arxiv.org/pdf/"+this.paper_id;
-        if (this.paperVersion){
-          url += ("v"+this.paperVersion);
+
+        if (this.paperVersion && this.paperVersion[0] == 'v')
+            this.paperVersion = this.paperVersion.slice(1);
+
+        if (this.resolved && this.paperId) {
+            this.paperFullId = this.paperId;
+            if (this.paperVersion)
+                this.paperFullId = this.paperFullId + 'v' + this.paperVersion;
+            this.paperURL    = "http://arxiv.org/pdf/"+this.paperFullId;
         }
-        url += ".pdf";
-        return url;
       }
+
     })
   </script>
 
