Add ::create_updated! method to Paper to update a paper based on an old paper and a arxiv document

--- a/app/assets/stylesheets/state-colors.css.scss
+++ b/app/assets/stylesheets/state-colors.css.scss
@@ -21,6 +21,7 @@ $oj-paper-states-bg: (
         under_review:    #ffffc8,
         accepted:        #dcffdc,
         rejected:        #ffd6da,
+        superceded:      #ffb4ef,
 );
 
 $oj-paper-actions-bg: (
