--- a/app/assets/components/mixins/oj-url-helpers.html
+++ b/app/assets/components/mixins/oj-url-helpers.html
@@ -27,7 +27,11 @@
         },
 
         arxiv_lookup_url: function(paper_id){
-          return "/papers/"+paper_id+"/arXiv_details"
+          return "/papers/"+paper_id+"/arxiv_details"
+        },
+
+        paperCheckForUpdatePath: function(paper){
+            return "/papers/"+paper.arxiv_id+"/check_for_update"
         },
 
         google_preview_lookup: function(paper){
